--- a/bootstrap-example.html
+++ b/bootstrap-example.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Bootstrap .js Example</title>
+	<title>Bootstrap ValidaMe.js Example</title>
 	<!-- Bootstrap core CSS -->
 	<link href="bootstrap/css/bootstrap.min.css" rel="stylesheet">
 </head>
@@ -63,10 +63,10 @@
 
 	<script src="foundation/js/vendor/jquery.min.js"></script>
 	<script src="bootstrap/js/bootstrap.min.js"></script>
-	<script type="text/javascript" src="FieldChecker.js"></script>
+	<script type="text/javascript" src="ValidaMe.js"></script>
 	<script type="text/javascript">
 		$("#evaluate").click(function(){
-			var Checker = new FieldChecker({
+			var Checker = new ValidaMe({
 				'frame':'Bootstrap'
 			});
 			
