--- a/foundation-example.html
+++ b/foundation-example.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Foundation .js Example</title>
+	<title>Foundation ValidaMe.js Example</title>
 	<link rel="stylesheet" href="foundation/css/foundation.css" />
 </head>
 <body>
@@ -50,10 +50,10 @@
 
 	<script src="jquery.min.js"></script>
     <script src="foundation/js/foundation.min.js"></script>
-	<script type="text/javascript" src="FieldChecker.js"></script>
+	<script type="text/javascript" src="ValidaMe.js"></script>
 	<script type="text/javascript">
 		$("#evaluate").click(function(){
-			var Checker = new FieldChecker();			
+			var Checker = new ValidaMe();			
 			if (Checker.validate()) {
 				// DO ANY ACTION
 			};
